// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Actitivy Snapshot component 1`] = `
<body>
  <div>
    <div>
      <div
        class="card"
      >
        <div
          class="card-body d-flex"
        >
          <div
            class="info mr-2"
          >
            <h4
              class="text-wrap d-flex flex-row align-items-center"
            >
              <div
                class="custom-control custom-control-green custom-radio"
                title="Mark as done"
              >
                <input
                  class="custom-control-input"
                  data-testid="checkbox-data_id_1"
                  id="data_id_1"
                  type="checkbox"
                />
                <label
                  class="custom-control-label"
                  for="data_id_1"
                />
              </div>
              <a
                class="text-block"
                href="#"
              >
                test meet
              </a>
            </h4>
            <ul
              class="list-inline text-muted font-size-xs"
            >
              <li
                class="list-inline-item mr-3 align-middle activities-overdue"
                data-testid="li-item-date-data_id_1"
                id="li-item-date-data_id_1"
              >
                Mar 09 2022 1:15 PM
              </li>
              <li
                class="list-inline-item mr-4 align-middle"
              >
                <div
                  class="row"
                >
                  <div
                    class="col-auto px-1 col"
                  >
                    <div
                      class="align-items-end more-owners"
                    />
                  </div>
                </div>
              </li>
              <li
                class="list-inline-item align-middle"
              >
                Meet
              </li>
            </ul>
          </div>
          <div
            class="activity-icon"
          >
            <span
              class="step-icon bg-soft-green"
            >
              <i
                class="material-icons-outlined"
              >
                call
              </i>
            </span>
          </div>
        </div>
      </div>
      <hr />
    </div>
  </div>
</body>
`;

exports[`Test Actitivy Snapshot component with guest rendered 1`] = `
<body>
  <div>
    <div>
      <div
        class="card"
      >
        <div
          class="card-body d-flex"
        >
          <div
            class="info mr-2"
          >
            <h4
              class="text-wrap d-flex flex-row align-items-center"
            >
              <div
                class="custom-control custom-control-green custom-radio"
                title="Mark as done"
              >
                <input
                  class="custom-control-input"
                  data-testid="checkbox-data_id_1"
                  id="data_id_1"
                  type="checkbox"
                />
                <label
                  class="custom-control-label"
                  for="data_id_1"
                />
              </div>
              <a
                class="text-block"
                href="#"
              >
                test meet
              </a>
            </h4>
            <ul
              class="list-inline text-muted font-size-xs"
            >
              <li
                class="list-inline-item mr-3 align-middle activities-overdue"
                data-testid="li-item-date-data_id_1"
                id="li-item-date-data_id_1"
              >
                Mar 09 2022 1:15 PM
              </li>
              <li
                class="list-inline-item mr-4 align-middle"
              >
                <div
                  class="row"
                >
                  <div
                    class="col-auto px-1 col"
                  >
                    <div
                      class="align-items-end more-owners"
                    >
                      <a
                        class="d-flex"
                        href="/settings/profile/users/guest_1"
                      >
                        <div
                          class="avatar avatar-xs avatar-circle avatar-soft-primary avatar-md mr-n2"
                        >
                          <span
                            class="avatar-initials avatar-icon-font-size"
                          >
                            G1
                          </span>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="list-inline-item align-middle"
              >
                conference link
              </li>
            </ul>
          </div>
          <div
            class="activity-icon"
          >
            <span
              class="step-icon bg-soft-pink"
            >
              <i
                class="material-icons-outlined"
              >
                restaurant_menu
              </i>
            </span>
          </div>
        </div>
      </div>
      <hr />
    </div>
  </div>
</body>
`;

exports[`Test Actitivy Snapshot component with guests and icon add 1`] = `
<body>
  <div>
    <div>
      <div
        class="card"
      >
        <div
          class="card-body d-flex"
        >
          <div
            class="info mr-2"
          >
            <h4
              class="text-wrap d-flex flex-row align-items-center"
            >
              <div
                class="custom-control custom-control-green custom-radio"
                title="Mark as done"
              >
                <input
                  class="custom-control-input"
                  data-testid="checkbox-data_id_1"
                  id="data_id_1"
                  type="checkbox"
                />
                <label
                  class="custom-control-label"
                  for="data_id_1"
                />
              </div>
              <a
                class="text-block"
                href="#"
              >
                test meet
              </a>
            </h4>
            <ul
              class="list-inline text-muted font-size-xs"
            >
              <li
                class="list-inline-item mr-3 align-middle activities-overdue"
                data-testid="li-item-date-data_id_1"
                id="li-item-date-data_id_1"
              >
                Mar 09 2022 1:15 PM
              </li>
              <li
                class="list-inline-item mr-4 align-middle"
              >
                <div
                  class="row"
                >
                  <div
                    class="col-auto px-1 col"
                  >
                    <div
                      class="align-items-end more-owners"
                    >
                      <a
                        class="d-flex"
                        href="/settings/profile/users/guest_1"
                      >
                        <div
                          class="avatar avatar-xs avatar-circle avatar-soft-primary avatar-md mr-n2"
                        >
                          <span
                            class="avatar-initials avatar-icon-font-size"
                          >
                            G1
                          </span>
                        </div>
                      </a>
                      <a
                        class="d-flex"
                        href="/settings/profile/users/guest_2"
                      >
                        <div
                          class="avatar avatar-xs avatar-circle avatar-soft-primary avatar-md mr-n2"
                        >
                          <span
                            class="avatar-initials avatar-icon-font-size"
                          >
                            G2
                          </span>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div
                    class="px-0 col"
                  >
                    <div
                      class="dropdown"
                      id="dropdown-link-data_id_1"
                    >
                      <div
                        class="cursor-pointer"
                        href=""
                      >
                        <span
                          class=""
                        >
                          <div
                            class="section-owners-header more-owners"
                          >
                            <button
                              class="btn btn-icon btn-xs btn-ghost-primary rounded-circle"
                            >
                              <i
                                class="material-icons-outlined"
                              >
                                add
                              </i>
                            </button>
                          </div>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="list-inline-item align-middle"
              >
                conference link
              </li>
            </ul>
          </div>
          <div
            class="activity-icon"
          >
            <span
              class="step-icon bg-soft-pink"
            >
              <i
                class="material-icons-outlined"
              >
                restaurant_menu
              </i>
            </span>
          </div>
        </div>
      </div>
      <hr />
    </div>
  </div>
</body>
`;
